--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -2,4 +2,27 @@
 
 /* 回答はここに書いてね */
 
+.q2__content__box {
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #eff3f4;
+}
+
+.q2__thumb__left.is-left {
+  float: left;
+  margin-right: 20px;
+}
+
+.q2__thumb__right.is-right {
+  float: right;
+  margin-left: 20px;
+}
+
+.q2__text {
+  font-size: 18px;
+  line-height: 22px;
+  word-break: break-all;
+}
+
 /* 回答はここに書いてね */
