--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -2,4 +2,54 @@
 
 /* 回答はここに書いてね */
 
+.q4 {
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.q4__contents:first-child {
+  margin-top: 0;
+}
+.q4__contents {
+  display: table;
+  margin-top: 20px;
+  width: 100%;
+  background-color: #ecf1f2;
+}
+
+.q4__contents__cell {
+  display: table-cell;
+  padding: 20px;
+  text-align: center;
+}
+
+.pink {
+  width: 100px;
+  background-color: #fdc8b8;
+  padding: 20px;
+}
+
+.purple {
+  background-color: #e0abd9;
+}
+
+.blue{
+  width: 100px;
+  background-color: #b6d8ed;
+}
+
+.yellow {
+  background-color: #e5d32e;
+}
+
+.red {
+  background-color: #ec8f9a;
+}
+
+.green {
+  width: 500px;
+  background-color: #8fdcad;
+}
+
+
 /* 回答はここに書いてね */
