--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -2,7 +2,7 @@
 
 /* 回答はここに書いてね */
 
-.q5 {
+.main-box {
   position: relative;
   margin: 0 auto;
   width: 500px;
@@ -17,6 +17,55 @@
   line-height: 100px;
   text-align: center;
   font-weight: bold;
+}
+
+.is-1 {
+  z-index: 1;
+  top: 40px;
+  left: 200px;
+  background-color: #ffefd3;
+}
+
+.is-2 {
+  z-index: 2;
+  top: 120px;
+  right: 120px;
+  background-color: #7084de;
+}
+
+.is-3 {
+  z-index: 3;
+  top: 200px;
+  right: 40px;
+  background-color: #d0ecea;
+}
+
+.is-4 {
+  z-index: 4;
+  top: 280px;
+  left: 280px;
+  background-color: #8b7a5e;
+}
+
+.is-5 {
+  z-index: 5;
+  top: 360px;
+  left: 200px;
+  background-color: #9fd6d2;
+}
+
+.is-6 {
+  z-index: 6;
+  top: 280px;
+  left: 120px;
+  background-color: #fffee4;
+}
+
+.is-7 {
+  z-index: 7;
+  top: 200px;
+  left: 40px;
+  background-color: #deae70;
 }
 
 .is-8 {
@@ -34,55 +83,6 @@
   height: 20px;
   background-color: #FFEFD3;
   content: "";
-}
-
-.is-5 {
-  z-index: 5;
-  top: 360px;
-  left: 200px;
-  background-color: #9fd6d2;
-}
-
-.is-1 {
-  z-index: 1;
-  top: 40px;
-  left: 200px;
-  background-color: #ffefd3;
-}
-
-.is-7 {
-  z-index: 7;
-  top: 200px;
-  left: 40px;
-  background-color: #deae70;
-}
-
-.is-4 {
-  z-index: 4;
-  top: 280px;
-  left: 280px;
-  background-color: #8b7a5e;
-}
-
-.is-6 {
-  z-index: 6;
-  top: 280px;
-  left: 120px;
-  background-color: #fffee4;
-}
-
-.is-2 {
-  z-index: 2;
-  top: 120px;
-  right: 120px;
-  background-color: #7084de;
-}
-
-.is-3 {
-  z-index: 3;
-  top: 200px;
-  right: 40px;
-  background-color: #d0ecea;
 }
 
 .is-9 {
