レイアウトパーツ前半完了、確認いただき済。

--- a/layout_parts/q2/css/style.css
+++ b/layout_parts/q2/css/style.css
@@ -9,12 +9,12 @@
   background-color: #eff3f4;
 }
 
-.q2__thumb__left.is-left {
+.q2__thumb__left {
   float: left;
   margin-right: 20px;
 }
 
-.q2__thumb__right.is-right {
+.q2__thumb__right {
   float: right;
   margin-left: 20px;
 }
