--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -2,4 +2,97 @@
 
 /* 回答はここに書いてね */
 
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.q7--float .clearfix .is-float:first-child {
+  margin-left: 0;
+}
+
+.is-float {
+  box-sizing: border-box;
+  float: left;
+  width: 225px;
+  margin-left: 50px;
+}
+
+.main-box {
+  display: table;
+}
+
+.is-left {
+  vertical-align: middle;
+  width: 225px;
+  display: table-cell;
+  padding-left: 0;
+}
+
+.is-right {
+  width: 225px;
+  display: table-cell;
+  padding-left: 50px;
+}
+
+.inline-main {
+  font-size: 0;
+}
+
+.inline-box:first-child {
+  margin-left: 0;
+}
+
+.inline-box {
+  display: inline-block;
+  width: 225px;
+  vertical-align: middle;
+  box-sizing: border-box;
+  margin-left: 50px;
+  font-size: 16px;
+}
+
+.flex-main {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+.flex-main .flex-box__left {
+  box-sizing: border-box;
+  vertical-align: middle;
+  width: 225px;
+}
+
+.flex-main .flex-box__right {
+  box-sizing: border-box;
+  vertical-align: middle;
+  width: 225px;
+}
+
+.inline-margin__main {
+  box-sizing: border-box;
+  font-size: 0;
+}
+
+.maintain-stable {
+  display: inline-block;
+  width: 300px;
+  vertical-align: top;
+}
+
+.maintain-flexible {
+  display: inline-block;
+  width: 100%;
+  margin-left: -300px;
+  padding-left: 350px;
+  box-sizing: border-box;
+}
+
+.maintain-text {
+  font-size: 16px;
+}
+
 /* 回答はここに書いてね */
+
