--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -2,4 +2,65 @@
 
 /* 回答はここに書いてね */
 
+.transition-box {
+  position: relative;
+  overflow: hidden;
+  margin: 0 auto;
+  height: 333px;
+  width: 500px;
+  cursor: pointer;
+}
+
+.q8__trans__thumb {
+  transition: all .5s;
+}
+
+.transition-box:hover .q8__trans__thumb{
+  transform: scale(1.5);
+}
+
+.q8__trans__text__box {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all .5s;
+  background: linear-gradient(to bottom, rgba(0,0,0,0),rgba(0,0,0,.8));
+}
+
+.transition-box:hover .q8__trans__text__box {
+  bottom: 0;
+}
+
+
+.q8__trans__text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 20px;
+  color: #fff;
+  box-sizing: border-box;
+  word-break: break-all;
+}
+
+.circle-box {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border-radius: 50%;
+  border: solid 10px #ecf1f2;
+  border-top-color: #00bcd4;
+  animation: loading 1.1s infinite linear;
+}
+
+@keyframes loading {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* 回答はここに書いてね */
