--- a/layout_parts/q9/css/style.css
+++ b/layout_parts/q9/css/style.css
@@ -2,4 +2,41 @@
 
 /* 回答はここに書いてね */
 
+.q9__text__box {
+  position: relative;
+  width: 500px;
+  margin: 0 auto;
+  border: 5px solid #222;
+  padding: 20px;
+  border-radius: 30px;
+}
+.q9__text__box:before,
+.q9__text__box:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border: 20px solid transparent;
+  content: "";
+}
+
+
+.q9__text__box:before {
+  bottom: -45px;
+  left: 30px;
+  border-top-color: #222;
+}
+
+.q9__text__box:after {
+  bottom: -38px;
+  left: 30px;
+  border-top-color: #fff;
+}
+
+.q9__text {
+  font-size: 16px;
+  line-height: 16px;
+}
+
 /* 回答はここに書いてね */
